--- a/k8s/environments/dev/common/mi/mi-data-extractor.yaml
+++ b/k8s/environments/dev/common/mi/mi-data-extractor.yaml
@@ -7,9 +7,9 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     repository.fluxcd.io/job: job.image
-    filter.fluxcd.io/job: glob:stg-*
+    filter.fluxcd.io/job: glob:pr-*
     repository.fluxcd.io/smoke: job.smoketests.image
-    filter.fluxcd.io/smoke: glob:stg-*
+    filter.fluxcd.io/smoke: glob:pr-*
 spec:
   releaseName: data-extractor
   chart:
@@ -18,27 +18,26 @@ spec:
     ref: master
   values:
     job:
-      image: sdshmctspublic.azurecr.io/data-extractor-job:stg-4af93f8
+      image: sdshmctspublic.azurecr.io/data-extractor-job:pr-178-5967f99
       suspend: false
       kind: CronJob
-      schedule: '0 0 * * *'
+      schedule: '0 1 * * *'
       activeDeadlineSeconds: 82800 #23 hours
       labels:
         app.kubernetes.io/instance: data-extractor-job
         app.kubernetes.io/name: data-extractor-job
       environment:
-        ETL_MSICLIENTID: 0a0afc36-0228-49d7-886c-77533f9621bb
-        APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
+        ETL_MSICLIENTID: 0f64b0be-7dde-4083-9843-bd807acb7758
+        APPINSIGHTS_INSTRUMENTATIONKEY: "36ab4447-464f-468d-929e-353627b156f8"
       smoketests:
-        image: sdshmctspublic.azurecr.io/data-extractor-job:stg-4af93f8
+        image: sdshmctspublic.azurecr.io/data-extractor-job:pr-178-5967f99
         enabled: true
       testsConfig:
         environment:
-          ETL_MSICLIENTID: 0a0afc36-0228-49d7-886c-77533f9621bb
-          APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
+          ETL_MSICLIENTID: 0f64b0be-7dde-4083-9843-bd807acb7758
+          APPINSIGHTS_INSTRUMENTATIONKEY: "36ab4447-464f-468d-929e-353627b156f8"
     global:
-      subscriptionId: "74dacd4f-a248-45bb-a2f0-af700dc4cf68"
+      subscriptionId: "867a878b-cb68-4de5-9741-361ac9e178b6"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
-      environment: "stg"
+      environment: "dev"
       ccd_environment: "aat"
-
