--- a/k8s/environments/ithc/cluster-00/mi/mi-data-extractor.yaml
+++ b/k8s/environments/ithc/cluster-00/mi/mi-data-extractor.yaml
@@ -7,9 +7,9 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     repository.fluxcd.io/job: job.image
-    filter.fluxcd.io/job: glob:stg-*
+    filter.fluxcd.io/job: glob:ithc-*
     repository.fluxcd.io/smoke: job.smoketests.image
-    filter.fluxcd.io/smoke: glob:stg-*
+    filter.fluxcd.io/smoke: glob:ithc-*
 spec:
   releaseName: data-extractor
   chart:
@@ -18,7 +18,7 @@ spec:
     ref: master
   values:
     job:
-      image: sdshmctspublic.azurecr.io/data-extractor-job:stg-4af93f8
+      image: sdshmctspublic.azurecr.io/data-extractor-job:ithc-4af93f8
       suspend: false
       kind: CronJob
       schedule: '0 0 * * *'
@@ -27,18 +27,17 @@ spec:
         app.kubernetes.io/instance: data-extractor-job
         app.kubernetes.io/name: data-extractor-job
       environment:
-        ETL_MSICLIENTID: 0a0afc36-0228-49d7-886c-77533f9621bb
-        APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
+        ETL_MSICLIENTID: d0d62785-4e3f-4c83-97a6-0fb66739d1a1
+        APPINSIGHTS_INSTRUMENTATIONKEY: "dca44538-3493-497e-8375-05ef17511c98"
       smoketests:
-        image: sdshmctspublic.azurecr.io/data-extractor-job:stg-4af93f8
+        image: sdshmctspublic.azurecr.io/data-extractor-job:ithc-4af93f8
         enabled: true
       testsConfig:
         environment:
-          ETL_MSICLIENTID: 0a0afc36-0228-49d7-886c-77533f9621bb
-          APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
+          ETL_MSICLIENTID: d0d62785-4e3f-4c83-97a6-0fb66739d1a1
+          APPINSIGHTS_INSTRUMENTATIONKEY: "dca44538-3493-497e-8375-05ef17511c98"
     global:
-      subscriptionId: "74dacd4f-a248-45bb-a2f0-af700dc4cf68"
+      subscriptionId: "ba71a911-e0d6-4776-a1a6-079af1df7139"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
-      environment: "stg"
-      ccd_environment: "aat"
-
+      environment: "ithc"
+      ccd_environment: "ithc"
