--- a/k8s/environments/ithc/cluster-00/mi/mi-staging-service.yaml
+++ b/k8s/environments/ithc/cluster-00/mi/mi-staging-service.yaml
@@ -7,9 +7,9 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     repository.fluxcd.io/job: job.image
-    filter.fluxcd.io/job: glob:stg-*
+    filter.fluxcd.io/job: glob:ithc-*
     repository.fluxcd.io/smoke: job.smoketests.image
-    filter.fluxcd.io/smoke: glob:stg-*
+    filter.fluxcd.io/smoke: glob:ithc-*
 spec:
   releaseName: mi-staging-service
   chart:
@@ -18,7 +18,7 @@ spec:
     ref: master
   values:
     job:
-      image: sdshmctspublic.azurecr.io/mi-staging-service:stg-f5562ec
+      image: sdshmctspublic.azurecr.io/mi-staging-service:ithc-f5562ec
       suspend: false
       kind: CronJob
       schedule: '30 0 * * *'
@@ -27,16 +27,16 @@ spec:
         app.kubernetes.io/instance: mi-staging-service
         app.kubernetes.io/name: mi-staging-service
       environment:
-        APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
-        MI_CLIENT_ID: e40d289d-0a27-40f8-bfef-63feae41f523
+        APPINSIGHTS_INSTRUMENTATIONKEY: "dca44538-3493-497e-8375-05ef17511c98"
+        MI_CLIENT_ID: 8767d854-17da-449e-b7ac-8d08fa2609d7
       smoketests:
-        image: sdshmctspublic.azurecr.io/mi-staging-service:stg-f5562ec
+        image: sdshmctspublic.azurecr.io/mi-staging-service:ithc-f5562ec
         enabled: true
       testsConfig:
         environment:
-          MI_CLIENT_ID: e40d289d-0a27-40f8-bfef-63feae41f523
-          APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
+          MI_CLIENT_ID: 8767d854-17da-449e-b7ac-8d08fa2609d7
+          APPINSIGHTS_INSTRUMENTATIONKEY: "dca44538-3493-497e-8375-05ef17511c98"
     global:
-      subscriptionId: "74dacd4f-a248-45bb-a2f0-af700dc4cf68"
+      subscriptionId: "ba71a911-e0d6-4776-a1a6-079af1df7139"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
-      environment: "stg"
+      environment: "ithc"
