--- a/k8s/environments/test/cluster-00/mi/mi-extraction-service.yaml
+++ b/k8s/environments/test/cluster-00/mi/mi-extraction-service.yaml
@@ -7,9 +7,9 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     repository.fluxcd.io/job: job.image
-    filter.fluxcd.io/job: glob:stg-*
+    filter.fluxcd.io/job: glob:pr-*
     repository.fluxcd.io/smoke: job.smoketests.image
-    filter.fluxcd.io/smoke: glob:stg-*
+    filter.fluxcd.io/smoke: glob:pr-*
 spec:
   releaseName: mi-extraction-service
   chart:
@@ -18,11 +18,10 @@ spec:
     ref: master
   values:
     job:
-      image: sdshmctspublic.azurecr.io/mi-extraction-service:stg-8612ca9
+      image: sdshmctspublic.azurecr.io/mi-extraction-service:pr-138-914f0d4
       suspend: false
       kind: CronJob
-      schedule: '40 0 * * *'
-      activeDeadlineSeconds: 82800 #23 hours
+      schedule: '40 1 * * *'
       labels:
         app.kubernetes.io/instance: mi-extraction-service
         app.kubernetes.io/name: mi-extraction-service
@@ -36,15 +35,15 @@ spec:
           - sftp-remote-password
           - encryption-publicKey
       environment:
-        APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
-        MI_CLIENT_ID: 6844ae4d-1934-4eaa-9fe7-ca50cb32e1bd
-        SFTP_ENABLED: false
-        SFTP_FORCECHECK: true
-        SFTP_REMOTE_HOST: 10.24.254.130
-        SFTP_REMOTE_PORT: 22
+        APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
+        MI_CLIENT_ID: d726bc2d-fa66-49be-9425-b7cc13c0a8c2
+        SFTP_ENABLED: true
+        SFTP_REMOTE_HOST: mi-sftp-server-svc
+        SFTP_REMOTE_PORT: 2000
         SFTP_REMOTE_FOLDER: files/mi-platform-export/
+        SFTP_FILE_ENCRYPTION_ENABLED: true
       smoketests:
-        image: sdshmctspublic.azurecr.io/mi-extraction-service:stg-8612ca9
+        image: sdshmctspublic.azurecr.io/mi-extraction-service:pr-138-914f0d4
         enabled: true
       testsConfig:
         keyVaults:
@@ -57,16 +56,14 @@ spec:
             - sftp-remote-password
             - encryption-publicKey
         environment:
-          APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
-          MI_CLIENT_ID: 6844ae4d-1934-4eaa-9fe7-ca50cb32e1bd
-          SFTP_ENABLED: false
-          SFTP_REMOTE_HOST: 10.24.254.130
-          SFTP_REMOTE_PORT: 22
+          APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
+          MI_CLIENT_ID: d726bc2d-fa66-49be-9425-b7cc13c0a8c2
+          SFTP_ENABLED: true
+          SFTP_REMOTE_HOST: mi-sftp-server-svc
+          SFTP_REMOTE_PORT: 2000
           SFTP_REMOTE_FOLDER: files/mi-platform-export/
-          SFTP_FORCECHECK: true
-          DUMMY: false
-
+          SFTP_FILE_ENCRYPTION_ENABLED: true
     global:
-      subscriptionId: "74dacd4f-a248-45bb-a2f0-af700dc4cf68"
+      subscriptionId: "3eec5bde-7feb-4566-bfb6-805df6e10b90"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
-      environment: "stg"
+      environment: "test"
