--- a/k8s/environments/test/cluster-00/mi/mi-staging-service.yaml
+++ b/k8s/environments/test/cluster-00/mi/mi-staging-service.yaml
@@ -7,9 +7,9 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     repository.fluxcd.io/job: job.image
-    filter.fluxcd.io/job: glob:stg-*
+    filter.fluxcd.io/job: glob:pr-*
     repository.fluxcd.io/smoke: job.smoketests.image
-    filter.fluxcd.io/smoke: glob:stg-*
+    filter.fluxcd.io/smoke: glob:pr-*
 spec:
   releaseName: mi-staging-service
   chart:
@@ -18,25 +18,24 @@ spec:
     ref: master
   values:
     job:
-      image: sdshmctspublic.azurecr.io/mi-staging-service:stg-f5562ec
+      image: sdshmctspublic.azurecr.io/mi-staging-service:pr-149-97dda78
       suspend: false
       kind: CronJob
-      schedule: '30 0 * * *'
-      activeDeadlineSeconds: 82800 #23 hours
+      schedule: '30 1 * * *'
       labels:
         app.kubernetes.io/instance: mi-staging-service
         app.kubernetes.io/name: mi-staging-service
       environment:
-        APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
-        MI_CLIENT_ID: e40d289d-0a27-40f8-bfef-63feae41f523
+        APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
+        MI_CLIENT_ID: e045887e-0f15-45be-bbd2-44060d5e3aaa
       smoketests:
-        image: sdshmctspublic.azurecr.io/mi-staging-service:stg-f5562ec
+        image: sdshmctspublic.azurecr.io/mi-staging-service:pr-149-97dda78
         enabled: true
       testsConfig:
         environment:
-          MI_CLIENT_ID: e40d289d-0a27-40f8-bfef-63feae41f523
-          APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
+          APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
+          MI_CLIENT_ID: e045887e-0f15-45be-bbd2-44060d5e3aaa
     global:
-      subscriptionId: "74dacd4f-a248-45bb-a2f0-af700dc4cf68"
+      subscriptionId: "3eec5bde-7feb-4566-bfb6-805df6e10b90"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
-      environment: "stg"
+      environment: "test"
