--- a/k8s/environments/dev/common/mi/mi-integration-service.yaml
+++ b/k8s/environments/dev/common/mi/mi-integration-service.yaml
@@ -19,7 +19,7 @@ spec:
   values:
     job:
       image: sdshmctspublic.azurecr.io/mi-integration-service:pr-169-8675883
-      suspend: false
+      suspend: true
       kind: CronJob
       schedule: '15 1 * * *'
       labels:
