--- a/k8s/environments/dev/common/mi/mi-staging-service.yaml
+++ b/k8s/environments/dev/common/mi/mi-staging-service.yaml
@@ -19,7 +19,7 @@ spec:
   values:
     job:
       image: sdshmctspublic.azurecr.io/mi-staging-service:pr-149-97dda78
-      suspend: false
+      suspend: true
       kind: CronJob
       schedule: '30 1 * * *'
       labels:
