--- a/k8s/environments/dev/common/mi/mi-data-extractor.yaml
+++ b/k8s/environments/dev/common/mi/mi-data-extractor.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: mi-staging-service
+  name: data-extractor-job
   namespace: mi
   annotations:
     flux.weave.works/automated: "true"
@@ -11,31 +11,33 @@ metadata:
     repository.fluxcd.io/smoke: job.smoketests.image
     filter.fluxcd.io/smoke: glob:pr-*
 spec:
-  releaseName: mi-staging-service
+  releaseName: data-extractor
   chart:
     git: git@github.com:hmcts/shared-services-flux
-    path: k8s/release/mi/mi-staging-service
+    path: k8s/release/mi/mi-data-extractor-job
     ref: master
   values:
     job:
-      image: sdshmctspublic.azurecr.io/mi-staging-service:pr-149-97dda78
+      image: sdshmctspublic.azurecr.io/data-extractor-job:pr-178-5967f99
       suspend: true
       kind: CronJob
-      schedule: '30 1 * * *'
+      schedule: '0 1 * * *'
+      activeDeadlineSeconds: 82800 #23 hours
       labels:
-        app.kubernetes.io/instance: mi-staging-service
-        app.kubernetes.io/name: mi-staging-service
+        app.kubernetes.io/instance: data-extractor-job
+        app.kubernetes.io/name: data-extractor-job
       environment:
+        ETL_MSICLIENTID: 0f64b0be-7dde-4083-9843-bd807acb7758
         APPINSIGHTS_INSTRUMENTATIONKEY: "36ab4447-464f-468d-929e-353627b156f8"
-        MI_CLIENT_ID: 5407b258-9168-499b-8e5e-32fd2e1bad3b
       smoketests:
-        image: sdshmctspublic.azurecr.io/mi-staging-service:pr-149-97dda78
-        enabled: false
+        image: sdshmctspublic.azurecr.io/data-extractor-job:pr-178-5967f99
+        enabled: true
       testsConfig:
         environment:
+          ETL_MSICLIENTID: 0f64b0be-7dde-4083-9843-bd807acb7758
           APPINSIGHTS_INSTRUMENTATIONKEY: "36ab4447-464f-468d-929e-353627b156f8"
-          MI_CLIENT_ID: 5407b258-9168-499b-8e5e-32fd2e1bad3b
     global:
       subscriptionId: "867a878b-cb68-4de5-9741-361ac9e178b6"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       environment: "dev"
+      ccd_environment: "aat"
