--- a/k8s/environments/test/common/mi/mi-sftp-server.yaml
+++ b/k8s/environments/test/common/mi/mi-sftp-server.yaml
@@ -50,8 +50,8 @@ spec:
           readOnly: true
           volumeAttributes:
             secretProviderClass: "mi-extraction-service-job-vault-test-secret-provider"
+      - name: config-cache
         emptyDir: {}
-
 ---
 kind: Service
 apiVersion: v1
