--- a/k8s/environments/test/common/mi/mi-sftp-server.yaml
+++ b/k8s/environments/test/common/mi/mi-sftp-server.yaml
@@ -45,19 +45,13 @@ spec:
           resources: {}
       volumes:
       - name: test
-        flexVolume:
-          driver: "azure/kv"
-          options:
-            usepodidentity: "true"                   
-            keyvaultname: "mi-vault-test" 
-            keyvaultobjectnames: "sftp-remote-password;sftp-remote-user"         
-            keyvaultobjecttypes: "secret;secret"               
-            resourcegroup: "mi-test-rg"        
-            subscriptionid: "DTS-SHAREDSERVICES-TEST"
-            tenantid: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+        csi:
+          driver: secrets-store.csi.k8s.io
+          readOnly: true
+          volumeAttributes:
+            secretProviderClass: "mi-extraction-service-job-vault-test-secret-provider"
       - name: config-cache
         emptyDir: {}
-
 ---
 kind: Service
 apiVersion: v1
