--- a/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
@@ -18,7 +18,7 @@ spec:
     ref: master
   values:
     job:
-      image: ssprivateprod.azurecr.io/mi-integration-service:prod-51aa146
+      image: sdshmctspublic.azurecr.io/mi-integration-service:prod-2c34285
       suspend: false
       kind: CronJob
       schedule: '15 1 * * *'
@@ -64,7 +64,7 @@ spec:
         GOV_UK_NOTIFY_ENABLED_PROBATE: true
         GOV_UK_NOTIFY_ENABLED_SSCS: true
       smoketests:
-        image: ssprivateprod.azurecr.io/mi-integration-service:prod-51aa146
+        image: sdshmctspublic.azurecr.io/mi-integration-service:prod-2c34285
         enabled: true
       testsConfig:
         keyVaults:
