--- a/k8s/environments/prod/cluster-00/mi/mi-staging-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-staging-service.yaml
@@ -18,7 +18,7 @@ spec:
     ref: master
   values:
     job:
-      image: ssprivateprod.azurecr.io/mi-staging-service:prod-d2ac116
+      image: sdshmctspublic.azurecr.io/mi-staging-service:prod-49f09a2
       suspend: false
       kind: CronJob
       schedule: '30 2 * * *'
@@ -35,7 +35,7 @@ spec:
         MI_CLIENT_ID: ce15efbc-13a8-40ee-8812-334a7d041910
         MAXLINESBUFFER: 500
       smoketests:
-        image: ssprivateprod.azurecr.io/mi-staging-service:prod-d2ac116
+        image: sdshmctspublic.azurecr.io/mi-staging-service:prod-49f09a2
         enabled: true
       testsConfig:
         environment:
