updating user-api chart branch name

--- a/k8s/namespaces/video-hearings/vh-user-api/vh-user-api.yaml
+++ b/k8s/namespaces/video-hearings/vh-user-api/vh-user-api.yaml
@@ -12,4 +12,4 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-user-api
     path: charts/vh-user-api
-    ref: helm_chart_setup
+    ref: feature/VIH-7155_AksSecretFileProvider
