updating readiness and liveness paths

--- a/k8s/namespaces/video-hearings/vh-user-api/vh-testing.yaml
+++ b/k8s/namespaces/video-hearings/vh-user-api/vh-testing.yaml
@@ -19,6 +19,8 @@ spec:
       useInterpodAntiAffinity: false
       image: sdshmctspublic.azurecr.io/vh/bash:latest
       applicationPort: 8080
+      readinessPath: /
+      livenessPath: /
 
 
 
