--- a/k8s/environments/prod/cluster-00/mi/mi-integration-service-8x8-hist.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-integration-service-8x8-hist.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: mi-integration-service-8x8-hist-3
+  name: mi-integration-service-8x8-hist-4
   namespace: mi
   annotations:
     flux.weave.works/automated: "true"
@@ -11,7 +11,7 @@ metadata:
     repository.fluxcd.io/smoke: job.smoketests.image
     filter.fluxcd.io/smoke: glob:prod-*
 spec:
-  releaseName: mi-integration-service-8x8-hist-3
+  releaseName: mi-integration-service-8x8-hist-4
   chart:
     git: git@github.com:hmcts/shared-services-flux
     path: k8s/release/mi/mi-integration-service
@@ -26,8 +26,8 @@ spec:
       memoryLimits: '4096Mi'
       cpuLimits: '2000m'
       labels:
-        app.kubernetes.io/instance: mi-integration-service-job-8x8-hist-3
-        app.kubernetes.io/name: mi-integration-service-job-8x8-hist-3
+        app.kubernetes.io/instance: mi-integration-service-job-8x8-hist-4
+        app.kubernetes.io/name: mi-integration-service-job-8x8-hist-4
       keyVaults:
         "mi-vault":
           excludeEnvironmentSuffix: false
@@ -47,6 +47,19 @@ spec:
         MI_EIGHTBYEIGHT_EXTRACTION_TO_DATE: "2021-01-19"
         MI_VALIDATE_ALL_LANDING_BLOBS: true
         MI_VALIDATE_ALL_LANDING_BLOBS_DISABLED_CONTEND_CHECK: true
+
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_ALLINTERACTIONS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_TCLS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_SCLS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_AGENTS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CAMPAIGNS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CHANNELS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_QUEUES_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_QUEUES_OFFLINE_SLAS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS_INTERACTIONS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS_DISABLED: true
+
+  keyVaults:
     global:
       subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
