--- a/k8s/namespaces/neuvector/neuvector.yaml
+++ b/k8s/namespaces/neuvector/neuvector.yaml
@@ -76,6 +76,8 @@ spec:
         limits:
           cpu: 1
           memory: 5Gi
+          containerd:
+            enabled: true
       controller:
         image:
           repository: neuvector/controller
