--- a/k8s/namespaces/neuvector/patches/stg/neuvector.yaml
+++ b/k8s/namespaces/neuvector/patches/stg/neuvector.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
   values:
     keyvault:
-      name: dtssharedservicessboxkv
+      name: dtssharedservicesstgkv
       resourcegroup: genesis-rg
-      subscriptionid: a8140a9e-f1b0-481f-a4de-09e2ee23f7ab
+      subscriptionid: 74dacd4f-a248-45bb-a2f0-af700dc4cf68 
       tenantid: 531ff96d-0ae9-462a-8d2d-bec7c0b42082
       aadpodidbinding: neuvector
       licensesecretname: neuvector-license-dev
