mi 8x8 hist job

--- a/k8s/environments/prod/cluster-00/mi/mi-integration-service-8x8-hist.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-integration-service-8x8-hist.yaml
@@ -45,7 +45,7 @@ spec:
         DATA_SOURCE_PAYMENT: false
         MI_EIGHTBYEIGHT_EXTRACTION_FROM_DATE: "2017-07-01"
         MI_EIGHTBYEIGHT_EXTRACTION_TO_DATE: "2021-01-19"
-        MI_VALIDATE_ALL_LANDING_BLOBS: true
+        MI_VALIDATE_ALL_LANDING_BLOBS: false
         MI_VALIDATE_ALL_LANDING_BLOBS_DISABLED_CONTEND_CHECK: true
 
         MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_ALLINTERACTIONS_DISABLED: true
@@ -58,8 +58,28 @@ spec:
         MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_QUEUES_OFFLINE_SLAS_DISABLED: true
         MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS_INTERACTIONS_DISABLED: true
         MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS_DISABLED: true
-        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS_ACTIVITIES_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_AGENTSACTIVITIES_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_AGENTS_INTERACTIONS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_AGENTS_STATISTICS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_AGENTS_SKILLS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_AGENTS_OUTBOUNDCALLS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_AGENTS_STATUSES_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_INTERACTIONS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS_AGENTS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS_OUTBOUNDCALLS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS_STATUSES_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_QUEUES_INTERACTIONS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_QUEUES_STATISTICS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_QUEUES_SKILLS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_QUEUES_ONLINE_SLAS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CHANNELS_STATISTICS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CHANNELS_INTERACTIONS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CHANNELS_OFFLINE_SLAS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CHANNELS_ONLINE_SLAS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CAMPAIGNS_RECORDS_DISABLED: true
+        MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CAMPAIGNS_INTERACTIONS_DISABLED: true
 
+        # MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS-ACTIVITIES_DISABLED: true
     global:
       subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
