MI ingest with errors

--- a/k8s/environments/prod/cluster-00/mi/mi-integration-service-8x8-hist.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-integration-service-8x8-hist.yaml
@@ -78,7 +78,7 @@ spec:
         MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CHANNELS_ONLINE_SLAS_DISABLED: true
         MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CAMPAIGNS_RECORDS_DISABLED: true
         MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_CAMPAIGNS_INTERACTIONS_DISABLED: true
-
+        MI_EIGHTBYEIGHT_EXTRACTION_SKIPERRORS: true
         # MI_EIGHTBYEIGHT_EXTRACTION_SERVICES_GROUPS-ACTIVITIES_DISABLED: true
     global:
       subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
