--- a/k8s/environments/stg/common/neuvector/fluentbit-log.yaml
+++ b/k8s/environments/stg/common/neuvector/fluentbit-log.yaml
@@ -1,11 +1,12 @@
-apiVersion: ENC[AES256_GCM,data:690=,iv:h6tvwtjgJxReB8iq0wTHjBgObCWJ6gntiuMKediq/Qc=,tag:65L2C1c7wPbWqgMQz+ROeA==,type:str]
+apiVersion: ENC[AES256_GCM,data:GLY=,iv:eSOzvudjpp5Si/I6b5QAYhdf6+5xaaOswIVgU9aLNxQ=,tag:vGER0eHjlO4UOtQ2ob6VPQ==,type:str]
 data:
-    azure_log_workspace_id: ENC[AES256_GCM,data:5SoRG68sqlLKAS+GBZdT9MZ995lRVMFi3hH0yiBgWbCAO6UIVEwq/ez9UJKG3NNi,iv:TuSIhc2FryzypYfk2T3BN7DBrMCou9j5Nna5URpzMC8=,tag:mWgfMdma0Ys7mrQ+emkFRg==,type:str]
-    azure_log_workspace_shared_key: ENC[AES256_GCM,data:wY4hrEcrXG+P4FKArU8S4hvJTcsHqKF0qfl6kXic99xoL/kvxz8YI3bFnqdSJezHtts5+M2tjkuDl9bwCkmQHhQzu+OjymNwTp1ScoqzBD6rJbJj08GZ1uPD0m38LIdPPMufLUGmB99zd2V+NwwCgTpkl3gdM6hl,iv:FubKHrtSFteB7JSzcHAPOJovhL8YxfNW7ewQHYJA1kc=,tag:frO7sZKqfidY6kmZ7M2ivQ==,type:str]
-kind: ENC[AES256_GCM,data:sF2Z4K7X,iv:ZFT3bZ9pnVl2KT0EwABEjMk807nEWb1HgGuD5gCGTak=,tag:CSYWWtKPoTp/9V+QPL2Ltg==,type:str]
+    azure_log_workspace_id: ENC[AES256_GCM,data:OeHQb6BodGFiYBW/W4yAguXaqkseQ2nFejgFwFRWipxNj0HxU5Hi/W3+7mGtvj+F,iv:WZdRflZ/HGwqNiOm4dg8ghcID4ZTcClC8ROMEFsZwOo=,tag:qOPXzCDqeWnuw352UFJcQA==,type:str]
+    azure_log_workspace_shared_key: ENC[AES256_GCM,data:f8H5mBXHweZ5KzuIq0BhpDyUgZ/KodryDDzrhVbBXgQ10b5nLlkjzFsQYP0pfbwDtmaRn1j0a38GS4ojOwe6gpALjyorrWnRwM4+OyfbkfWufISqYC5et8VoF4zMn6jNoR2V0AInsl3ErRZJgNLs0m5IdnE01a+C,iv:tf2ThHxnZhMzjfJkiwS8MW7oi7+T7H2W4C1AbozO2fk=,tag:DQKZGXFlkOuikGs+IYtM/w==,type:str]
+kind: ENC[AES256_GCM,data:VXPoWgqS,iv:DuUIwfS+Xb0MhNizrUgTTguvQ8f3JjiUvDdwBXcrvbE=,tag:Fu69E57AWUIayCN+kN1tWQ==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:ck0fCJ5LCytg+0dH1w==,iv:OGkSM4R/79mz0e8eW3YH4dZreZJsvetDjK+NuOfn8G4=,tag:jJmtunZc1OBQM0bE7NeTpQ==,type:str]
+    name: ENC[AES256_GCM,data:g8e3tLoNioiwny7yaw==,iv:zxu/yeb4kX3Dpd9YaBWx1NyY4sk9QrOdjjD0igkQF4E=,tag:LXq5TBzqlUqcpDwjzAoBKw==,type:str]
+    namespace: ENC[AES256_GCM,data:jHol6VwDXGoj,iv:VZSbUIKAh2QOS0SSybaqVObzwOIYAkDHwz7Qjoragn8=,tag:+N1zJ560fZxmyn0t2DFJYA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,11 +14,11 @@ sops:
     -   vault_url: https://dtssharedservicesstgkv.vault.azure.net
         name: sops-key
         version: b1838c5e73d94e1ab2c158344574ad08
-        created_at: '2021-02-04T09:44:01Z'
-        enc: t0WelMInxsLzH7oRVBR5Tcit2jC-z31zeFnPBk5s0eu7qemAg-5NFyblGJAQPnxfHwtqIxelscjUINTh_gvA191sKQvqGPTa2MoIoxlKVLDJu9sxWWgGASTJKDFAVFyoWPIkDKtXah8Z495_Pm5ldOXlhKd-LV6AjGP2pQUPjRs2VUlZZZecS-PsPdZ-moPbMJgGF9CxcZ9D9od325obLlpN5n5DeOm7OLOIEaDUdxQL06F1K9bv8L8ESLV_3V9pnw3ELypVUTdKU_9fWFIsPscZcZFq5DINxyHoYyTo2I0wGh79vjDZEtZE5U23kb6v9GztfjWeWBrTN_3HTKp4lw
+        created_at: '2021-02-04T10:32:42Z'
+        enc: p18lUUU0j2rJ0O3CBGlMjuww7Mmuq5lLCMJBd62S4Diik9FYiMvu50y-LGoBEj4QNvAv_6cc_UCyDLz6tmMGXauD-0eTvcXh7hbDgX8BuJ3g2PogLfho6B4N9RSwQT1rMWMBad_aJYOa7Sfmo7iDvXLhjpUyGNfixc_BMPQE28htrdt72XO4n4xf7vrU5NFzWIvZlINFpsPoY_HjfV5a84ha_35K-IaGzAWpiFt2ngKfeMZ5VxYYgqiMuO74nv-NeekJytnbxntHnOL_-DfvVMBXOokxZNVoe22e6ejQPAIKstqcuHSLPugSePgWMFCemSSsM8iYTKEcXD65DsfIyA
     hc_vault: []
-    lastmodified: '2021-02-04T09:44:05Z'
-    mac: ENC[AES256_GCM,data:QH8Pe+52F8uBEbMDu9vFBdDkqY7LGMIHgtWN+c6a2gRD2qhRxzkwlwpF30KkT30KFfA9MDjlV3mLnlmaJrx6prwvR+dYM9JnuiBSg21nsGgvTbnvaBWEDhjUKuLmIvpMPpjIMBS1mUekiKGdtj6Gw0GCoFVdz0keIaX9Do6jb8o=,iv:gDBWvOq+yUZIHC4q+bc+zKpMN3D3PDyLUb9zuw7cC9o=,tag:Jr1gTjM8ijnSkAbA7GRkig==,type:str]
+    lastmodified: '2021-02-04T10:32:46Z'
+    mac: ENC[AES256_GCM,data:Wg5YuPSRZvcgRA5gPNvktkK0q6BlyLAiqAQGnfe39hKCYrkFNyJPCGDNTHfyAjp6f29oQZKiEzSlPNxoqPRwApIEQC3jmO9DVrXU3RQY7yxWkeCRx8y+CsetHvSJNhJUWx1805AF1R271U6xbN9STUVoZuYObVT6SrJQh6nDwJQ=,iv:ukFp9Mf8FmArk9JCiu8Sq8i02XddCdy3lncSyoMiVwQ=,tag:5hLF/j1XO07gdcPD1cqB7Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.6.1
