--- a/k8s/namespaces/neuvector/patches/stg/neuvector.yaml
+++ b/k8s/namespaces/neuvector/patches/stg/neuvector.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: neuvector
 spec:
   values:
+    neuvector:
+      containerd:
+        enabled: true
     keyvault:
       name: dtssharedservicesstgkv
       resourcegroup: genesis-rg
