--- a/k8s/namespaces/video-hearings/vh-video-web/vh-video-web.yaml
+++ b/k8s/namespaces/video-hearings/vh-video-web/vh-video-web.yaml
@@ -12,4 +12,4 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-video-web
     path: charts/vh-video-web
-    ref: sds-migration-chart-setup
+    ref: VIH-7205_video-web
