--- a/k8s/namespaces/video-hearings/vh-video-api/vh-video-api.yaml
+++ b/k8s/namespaces/video-hearings/vh-video-api/vh-video-api.yaml
@@ -12,4 +12,4 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-video-api
     path: charts/vh-video-api
-    ref: master
+    ref: feature/VIH-7205_video-api
