--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -5,4 +5,6 @@ namespace: vh
 resources:
 - namespace.yaml
 - vh-user-api/vh-user-api.yaml
+- vh-testing/vh-testing.yaml
 - vh-video-api/vh-video-api.yaml
+- vh-video-web/vh-video-web.yaml
