Move to mailrelay ns

--- a/k8s/release/mailrelay/mailrelay/patches/dev/cluster-01/mailrelay.yaml
+++ b/k8s/release/mailrelay/mailrelay/patches/dev/cluster-01/mailrelay.yaml
@@ -3,15 +3,11 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: mailrelay
-  namespace: admin
+  namespace: mailrelay
 spec:
   values:
     service:
       type: LoadBalancer
-      loadBalancerIP: "10.145.15.15"
+      loadBalancerIP: "10.145.31.31"
 
     workload: StatefulSet
-
-    volumeClaim:
-      storageClass: "managed-premium"
-      storageSize: 10Gi
