--- a/k8s/release/mailrelay/mailrelay/mailrelay.yaml
+++ b/k8s/release/mailrelay/mailrelay/mailrelay.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: mailrelay
-  namespace: admin
+  namespace: mailrelay
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.chart-image: glob:v*
