--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -4,4 +4,7 @@ kind: Kustomization
 namespace: vh
 resources:
 - namespace.yaml
+- vh-user-api/vh-user-api.yaml
 - vh-video-web/vh-video-web.yaml
+- vh-video-api/vh-video-api.yaml
+
