MI enable jobs on sbox

--- a/k8s/environments/sbox/cluster-00/mi/mi-data-extractor.yaml
+++ b/k8s/environments/sbox/cluster-00/mi/mi-data-extractor.yaml
@@ -16,7 +16,7 @@ spec:
   values:
     job:
       image: sdshmctspublic.azurecr.io/data-extractor-job:pr-1
-      suspend: true
+      suspend: false
       kind: CronJob
       schedule: '0 * * * *'
       labels:
