Fix neuvector license secret name

--- a/k8s/namespaces/neuvector/patches/stg/common/neuvector.yaml
+++ b/k8s/namespaces/neuvector/patches/stg/common/neuvector.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: neuvector
 spec:
   values:
+    keyvault: 
+      name: sdsneuvector
+      licensesecretname: neuvector-license-dev
     keyVaults:
       sdsneuvector:
         secrets:
