--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
 - vh-user-api/vh-user-api.yaml
 - vh-video-web/vh-video-web.yaml
 - vh-video-api/vh-video-api.yaml
-
+- vh-azure-devops-agent/vh-azure-devops-agent.yaml
