adding bookings-api

--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
 - vh-video-web/vh-video-web.yaml
 - vh-video-api/vh-video-api.yaml
 - vh-azure-devops-agent/vh-azure-devops-agent.yaml
+- vh-bookings-api/vh-bookings-api.yaml
