--- a/k8s/namespaces/video-hearings/vh-bookings-api/vh-bookings-api.yaml
+++ b/k8s/namespaces/video-hearings/vh-bookings-api/vh-bookings-api.yaml
@@ -12,4 +12,4 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-bookings-api
     path: charts/vh-bookings-api
-    ref: helm_chart_setup
+    ref: feature/VIH-7234_fixing_typo
