vh-test-api init

--- a/k8s/namespaces/video-hearings/vh-test-api/vh-test-api.yaml
+++ b/k8s/namespaces/video-hearings/vh-test-api/vh-test-api.yaml
@@ -12,4 +12,4 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-test-api
     path: charts/vh-test-api
-    ref: helm_chart_setup
+    ref: VIH-7245-test-api
